--- a/machinelearning/projects/regression/housing_prices.ipynb
+++ b/machinelearning/projects/regression/housing_prices.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Machine learning - Regressie (Housing price)"
+    "# Machine learning - Regression (Housing price)"
    ]
   },
   {
